# agent-lab

./: .gitignore  CLAUDE.md  README.md
chat-api/: README.md  hello.py  pyproject.toml
chat-api/src/: main.py
chat-api/src/agents/: README.md  __init__.py  base.py  cli.py  settings.py
chat-api/src/agents/default/: __init__.py  agent.py
chat-api/src/app/: dependencies.py  main.py  models.py
chat-api/src/app/controllers/: chat_controller.py
chat-api/src/app/services/: chat_service.py
chat-ui/: README.md  package.json
