[project]
name = "chat-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "litestar>=2.17.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.poe.tasks]
dev = "uvicorn src.main:app --reload --reload-dir src --host 0.0.0.0 --port 8000"
test = "pytest tests/"
lint = "ruff check ."
format = "ruff format ."
build = "uv build"
docs = "mkdocs serve"